# slidesmith

./: .gitignore  AGENTS.md  CHANGELOG.md  DESIGN.md  NOTICE  README.md  RELEASING.md  pyproject.toml
.agents/plugins/: marketplace.json
.claude-plugin/: marketplace.json  plugin.json
.codex-plugin/: plugin.json
docs/: AGENT-GUIDE.md  MILESTONES.md  PLUGINS.md
docs/review/: FINDINGS-full-review.md  FINDINGS.md  repro.py  repro2.py  repro3.py
scripts/: bump_version.py  lint.sh
skills/slidesmith/: SKILL.md  recipes.md
src/extraslide/: __init__.py  bounds.py  class_style_requests.py  classes.py  client.py  conflicts.py  content_diff.py  content_generator.py  content_parser.py  content_requests.py  copy_requests.py  element_factories.py  id_manager.py  layout.py  qa.py  render_tree.py  shape_types.py  slide_processor.py  style_extractor.py  text_requests.py  transport.py  workspace_layout.py
src/slidesmith/: __init__.py  cli.py  credentials.py  workspace.py
tests/: test_agent_guide.py  test_class_conflicts.py  test_class_opacity.py  test_cli_staleness.py  test_cli_warning_rendering.py  test_credentials.py  test_diff_summary.py  test_entrypoint_imports.py  test_format.py  test_gogcli_discovery.py  test_replace_class.py  test_selector.py  test_snippet.py  test_theme.py  test_version_consistency.py  test_workspace_cli_validation.py
tests/contracts/: test_add_slide.py  test_advisor.py  test_batch_a_correctness.py  test_batch_a_transport.py  test_batch_b_security.py  test_batch_c_cleanup.py  test_c5_revision_locking.py  test_components.py  test_contracts.py  test_create_share.py  test_cycle4_ids.py  test_image_authoring.py  (+16 more)
tooling/: vulture_whitelist.py
(+72 files in other folders)
