[project]
name = "slidesmith"
version = "0.1.0"
description = "Agent+human co-editing for Google Slides: pull deck -> SML -> edit -> diff -> batchUpdate push to the same deck"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "httpx>=0.27.0",
    "certifi",
    "defusedxml>=0.7.1",
    "keyring>=24",
]

[project.scripts]
slidesmith = "slidesmith.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/slidesmith", "src/extraslide"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
