[project]
name = "slidesmith"
version = "0.9.0"
description = "Agent+human co-editing for Google Slides: pull deck -> SML -> edit -> diff -> batchUpdate push to the same deck"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "httpx>=0.27.0",
    "certifi",
    "defusedxml>=0.7.1",
    "keyring>=24",
    "Pillow>=10.0",
]

[project.scripts]
slidesmith = "slidesmith.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.9",
    "vulture>=2.14",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/slidesmith"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
extend-exclude = ["tooling/vulture_whitelist.py"]

[tool.ruff.lint]
select = ["F", "E9"]
